Fixed data grid drop down not showing when opened

--- a/assets/less/styles/datagrid.less
+++ b/assets/less/styles/datagrid.less
@@ -52,6 +52,10 @@
 
             > .col__auto-hide > .auto-hide-target {
                 visibility: hidden;
+
+                &.open {
+                    visibility: visible;
+                }
             }
 
             > .col__view-button {
